samples/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef Texture2D TextureCubemap;
typedef struct RenderTexture2D
{
    unsigned int id;   
    Texture2D texture; 
    Texture2D depth;   
    bool depthTexture; 
} RenderTexture2D;
typedef struct NPatchInfo
{
    Rectangle sourceRec; 
    int left;            
    int top;             
    int right;           
    int bottom;          
    int type;            
} NPatchInfo;
typedef struct CharInfo
{
    int value;           
    Rectangle rec;       
    int offsetX;         
    int offsetY;         
    int advanceX;        
    unsigned char *data; 
} CharInfo;
typedef struct Font
{
    Texture2D texture; 
    int baseSize;      
    int charsCount;    
    CharInfo *chars;   
} Font;
    RLAPI Image LoadImage(const char *fileName);                                                       
    RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                     
    RLAPI Image LoadImagePro(void *data, int width, int height, int format);                           
    RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize); 
    RLAPI void ExportImage(Image image, const char *fileName);                                         
    RLAPI void ExportImageAsCode(Image image, const char *fileName);                                   
    RLAPI Texture2D LoadTexture(const char *fileName);                                                 
    RLAPI Texture2D LoadTextureFromImage(Image image);                                                 
    RLAPI TextureCubemap LoadTextureCubemap(Image image, int layoutType);                              
    RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                    
    RLAPI void UnloadImage(Image image);                                                               
    RLAPI void UnloadTexture(Texture2D texture);                                                       
    RLAPI void UnloadRenderTexture(RenderTexture2D target);                                            
    RLAPI Color *GetImageData(Image image);                                                            
    RLAPI Vector4 *GetImageDataNormalized(Image image);                                                
    RLAPI int GetPixelDataSize(int width, int height, int format);                                     
    RLAPI Image GetTextureData(Texture2D texture);                                                     
    RLAPI Image GetScreenData(void);                                                                   
    RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                   
    RLAPI Image ImageCopy(Image image);                                                                                                
    RLAPI void ImageToPOT(Image *image, Color fillColor);                                                                              
    RLAPI void ImageFormat(Image *image, int newFormat);                                                                               
    RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                                          
    RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                                            
    RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                                          
    RLAPI void ImageAlphaPremultiply(Image *image);                                                                                    
    RLAPI void ImageCrop(Image *image, Rectangle crop);                                                                                
    RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                                                 
    RLAPI void ImageResizeNN(Image *image, int newWidth, int newHeight);                                                               
    RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);                    
    RLAPI void ImageMipmaps(Image *image);                                                                                             
    RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                                                      
    RLAPI Color *ImageExtractPalette(Image image, int maxPaletteSize, int *extractCount);                                              
    RLAPI Image ImageText(const char *text, int fontSize, Color color);                                                                
    RLAPI Image ImageTextEx(Font font, const char *text, float fontSize, float spacing, Color tint);                                   
    RLAPI void ImageDraw(Image *dst, Image src, Rectangle srcRec, Rectangle dstRec);                                                   
    RLAPI void ImageDrawRectangle(Image *dst, Rectangle rec, Color color);                                                             
    RLAPI void ImageDrawRectangleLines(Image *dst, Rectangle rec, int thick, Color color);                                             
    RLAPI void ImageDrawText(Image *dst, Vector2 position, const char *text, int fontSize, Color color);                               
    RLAPI void ImageDrawTextEx(Image *dst, Vector2 position, Font font, const char *text, float fontSize, float spacing, Color color); 
    RLAPI void ImageFlipVertical(Image *image);                                                                                        
    RLAPI void ImageFlipHorizontal(Image *image);                                                                                      
    RLAPI void ImageRotateCW(Image *image);                                                                                            
    RLAPI void ImageRotateCCW(Image *image);                                                                                           
    RLAPI void ImageColorTint(Image *image, Color color);                                                                              
    RLAPI void ImageColorInvert(Image *image);                                                                                         
    RLAPI void ImageColorGrayscale(Image *image);                                                                                      
    RLAPI void ImageColorContrast(Image *image, float contrast);                                                                       
    RLAPI void ImageColorBrightness(Image *image, int brightness);                                                                     
    RLAPI void ImageColorReplace(Image *image, Color color, Color replace);                                                            
    RLAPI Image GenImageColor(int width, int height, Color color);                                        
    RLAPI Image GenImageGradientV(int width, int height, Color top, Color bottom);                        
    RLAPI Image GenImageGradientH(int width, int height, Color left, Color right);                        
    RLAPI Image GenImageGradientRadial(int width, int height, float density, Color inner, Color outer);   
    RLAPI Image GenImageChecked(int width, int height, int checksX, int checksY, Color col1, Color col2); 
    RLAPI Image GenImageWhiteNoise(int width, int height, float factor);                                  
    RLAPI Image GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);        
    RLAPI Image GenImageCellular(int width, int height, int tileSize);                                    
    RLAPI void GenTextureMipmaps(Texture2D *texture);               
    RLAPI void SetTextureFilter(Texture2D texture, int filterMode); 
    RLAPI void SetTextureWrap(Texture2D texture, int wrapMode);     
    RLAPI void DrawTexture(Texture2D texture, int posX, int posY, Color tint);                                                             
    RLAPI void DrawTextureV(Texture2D texture, Vector2 position, Color tint);                                                              
    RLAPI void DrawTextureEx(Texture2D texture, Vector2 position, float rotation, float scale, Color tint);                                
    RLAPI void DrawTextureRec(Texture2D texture, Rectangle sourceRec, Vector2 position, Color tint);                                       
    RLAPI void DrawTextureQuad(Texture2D texture, Vector2 tiling, Vector2 offset, Rectangle quad, Color tint);                             
    RLAPI void DrawTexturePro(Texture2D texture, Rectangle sourceRec, Rectangle destRec, Vector2 origin, float rotation, Color tint);      
    RLAPI void DrawTextureNPatch(Texture2D texture, NPatchInfo nPatchInfo, Rectangle destRec, Vector2 origin, float rotation, Color tint); 
    RLAPI Font GetFontDefault(void);                                                                            
    RLAPI Font LoadFont(const char *fileName);                                                                  
    RLAPI Font LoadFontEx(const char *fileName, int fontSize, int *fontChars, int charsCount);                  
    RLAPI Font LoadFontFromImage(Image image, Color key, int firstChar);                                        
    RLAPI CharInfo *LoadFontData(const char *fileName, int fontSize, int *fontChars, int charsCount, int type); 
    RLAPI Image GenImageFontAtlas(CharInfo *chars, int charsCount, int fontSize, int padding, int packMethod);  
    RLAPI void UnloadFont(Font font);                                                                           
    RLAPI void DrawFPS(int posX, int posY);                                                                                       
    RLAPI void DrawText(const char *text, int posX, int posY, int fontSize, Color color);                                         
    RLAPI void DrawTextEx(Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint);              
    RLAPI void DrawTextRec(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint); 
    RLAPI void DrawTextRecEx(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint,
                             int selectStart, int selectLength, Color selectText, Color selectBack); 
    RLAPI int MeasureText(const char *text, int fontSize);                                   
    RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing); 
    RLAPI int GetGlyphIndex(Font font, int character);                                       
    RLAPI int GetNextCodepoint(const char *text, int *count);                                
    RLAPI bool TextIsEqual(const char *text1, const char *text2);                        
    RLAPI unsigned int TextLength(const char *text);                                     
    RLAPI unsigned int TextCountCodepoints(const char *text);                            
    RLAPI const char *TextFormat(const char *text, ...);                                 